<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="profile_title">Profile</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_your_otp">Enter your OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="recharges">Recharges</string>
    <string name="utilities">Utilities</string>
    <string name="finances_and_taxes">Finances and Taxes</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="history">History</string>
    <string name="hello">Hello,</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_recharges">Recent Recharges</string>
    <string name="all_contacts">All Contacts</string>
    <string name="_1234567890">1234567890</string>
    <string name="search_by_number_or_name">  Search by number or name</string>
    <string name="operator">Operator</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="recharge">Recharge</string>
    <string name="operators">Operators</string>
    <string name="add_recipient_bank_account">ADD BENEFICIARY</string>
    <string name="account_number">Account number</string>
    <string name="confirm_account_number">Confirm account number</string>
    <string name="ifsc">IFSC</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="phone_number_optional">Phone number (Optional)</string>
    <string name="nickname">Nickname</string>
    <string name="you_can_send_money_to_your_contact_using_their_bank_account_number_and_ifsc_code">You can send money to your contact using their bank account number and IFSC code.</string>
    <string name="confirm">Confirm</string>
    <string name="categories">Categories</string>
    <string name="filters">Filters</string>
    <string name="payment_to">Payment to..</string>
    <string name="to_person">to person</string>
    <string name="date">Date</string>
    <string name="debited_from">Debited from..</string>
    <string name="sms_id_to_566777_from_your_registered_mobile_no_or_call_97818_97818_toll_free_number_to_know_your_customer_id_balance_check_and_recharge_due_date" tools:ignore="TypographyDashes">SMS \'ID\' to 566777 from your registered mobile no. or call 97818-97818 (Toll Free Number) to know your Customer ID, balance check and recharge due date</string>
    <string name="customer_name">Customer name</string>
    <string name="aadhaar_enabled_payment_system">Aadhaar Enabled Payment System</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="amount">Amount</string>
    <string name="rupee_sign">₹</string>
    <string name="one_">1</string>
    <string name="two_">2</string>
    <string name="three_">3</string>
    <string name="four_">4</string>
    <string name="five_">5</string>
    <string name="_6">6</string>
    <string name="seven_">7</string>
    <string name="eight_">8</string>
    <string name="nine_">9</string>
    <string name="zero_">0</string>
    <string name="point_">.</string>
    <string name="pay_now">Pay Now</string>
    <string name="request">Request</string>
    <string name="select_your_bank">Select Your Bank</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="todo">TODO</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="go_to_register">Go to Register</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="go_to_sign_in">Go to sign in.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="apply">Apply</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="view_history">View History</string>
    <string name="remove">Remove</string>
    <string name="share">Share</string>
    <string name="acknowledge_no">Acknowledge No:</string>
    <string name="balance">BALANCE:</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="copy">COPY</string>
    <string name="paid_to">Paid to</string>
    <string name="message">Message</string>
    <string name="reference_id">Reference ID</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="amount_balance">Amount Balance</string>
    <string name="aadhaar">Aadhaar</string>
    <string name="name">Name</string>
    <string name="from_bank">From Bank</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="date_time">Date-Time</string>
    <string name="narration">Narration</string>
    <string name="update">Update</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="country">Country</string>
    <string name="state_province_region">State/Province/Region</string>
    <string name="pin_code">Pin Code</string>
    <string name="address">Address</string>
    <string name="facebook_url">Facebook URL</string>
    <string name="twitter_url">Twitter URL</string>
    <string name="linkedin_url">Linkedin URL</string>
    <string name="instagram_url">Instagram URL</string>
    <string name="dribble_url">Dribble URL</string>
    <string name="dropbox_url">Dropbox URL</string>
    <string name="google_plus_url">Google-plus URL</string>
    <string name="pinterest_url">Pinterest URL</string>
    <string name="skype_url">Skype URL</string>
    <string name="vine_url">Vine URL</string>
    <string name="aadhar_no">Aadhar No</string>
    <string name="select_pan_card">Select Pan Card</string>
    <string name="pan_no">Pan no</string>
    <string name="select_bank">Select Bank</string>
    <string name="branch_name">Branch Name</string>
    <string name="account_holder">Account Holder</string>
    <string name="passbook_photo">Passbook Photo</string>
    <string name="registered_mobile_number">Registered Mobile Number</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="acc">Account no</string>
    <string name="offline">Offline</string>
    <string name="add">Add</string>
    <string name="select_dates">Select Dates</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="reset">Reset</string>
    <string name="category">Category</string>
    <string name="clear">Clear</string>
    <string name="bbps">BBPS</string>
    <string name="dmt">DMT</string>
    <string name="micro_atm">Micro ATM</string>
    <string name="ae_ps">AePS</string>
    <string name="add_fund">Add Fund</string>
    <string name="no_records">No Records</string>
    <string name="select_micro_atm_device">Select Micro-ATM Device</string>
    <string name="my_balance_nenquiry">Balance\nEnquiry</string>
    <string name="my_cash_nwithdrawal">Cash\nWithdrawal</string>
    <string name="message_">Message :</string>
    <string name="response_">Response</string>
    <string name="txn_id">TXN ID</string>
    <string name="txn_type">Txn Type</string>
    <string name="card_number">Card Number</string>
    <string name="card_type">Card Type</string>
    <string name="terminal">Terminal</string>
    <string name="bank_name">Bank Name</string>
    <string name="txn_amount">Txn amount</string>
    <string name="balance_amount">Balance amount</string>
    <string name="balance_rrn">Balance RRN</string>
    <string name="type">Type</string>
    <string name="add_user">Add User</string>
    <string name="select_user_type">Select User Type</string>
    <string name="select_owner">Select Owner</string>
    <string name="select_package">Select Package</string>
    <string name="bank_1_limit">Bank 1 Limit</string>
    <string name="bank_2_limit">Bank 2 Limit</string>
    <string name="bank_3_limit">Bank 3 Limit</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="refund">Refund</string>
    <string name="proceed">Proceed</string>
    <string name="check_details">Check Details</string>
    <string name="commamt">Comm.</string>
    <string name="user_mobile_">User Mobile :</string>
    <string name="amount_left">Amount Left</string>
    <string name="mobile_no">MOBILE NO</string>
    <string name="op_id">OP ID :</string>
    <string name="op_id__">OP ID</string>
    <string name="to">To</string>
    <string name="op_name">OP Name</string>
    <string name="no_comm">no comm.</string>
    <string name="warning">Warning</string>
    <string name="opening_balance">Opening Balance</string>
    <string name="closing_balance">Closing Balance</string>
    <string name="commission">Commission</string>
    <string name="operator_name_re">Operator Name</string>
    <string name="consumer_number">Consumer Number</string>
    <string name="account_balance">Account Balance</string>
    <string name="card_type__">Card Type</string>
    <string name="account_number__">Account Number</string>
    <string name="beneficiary_id">Beneficiary ID</string>
    <string name="bank_iin">Bank IIN</string>
    <string name="browse_plan">Browse Plan</string>
    <string name="r_offer">R Offer</string>
    <string name="customer_info">Customer Info</string>
    <string name="monthly_recharge">Monthly Recharge</string>
    <string name="customer_name__">Customer Name</string>
    <string name="next_recharge_date">Next Recharge Date</string>
    <string name="last_recharge_date">Last Recharge Date</string>
    <string name="last_recharge_amount">Last Recharge Amount</string>
    <string name="plan_name">Plan Name</string>
    <string name="change_password">Change Password</string>
    <string name="t_pin">T-PIN</string>
    <string name="enter_your_t_pin">Enter Your T-Pin</string>
    <string name="gst">GST</string>
    <string name="tds">TDS</string>
    <string name="dmt_mobile">DMT Mobile</string>
    <string name="wallet_exchange">Wallet Exchange</string>
    <string name="exchange_wallet">Exchange Wallet</string>
    <string name="pan">PAN</string>
    <string name="payout">Payout</string>
    <string name="email__">Email</string>
    <string name="contact_us">Contact Us.</string>
    <string name="mobile">Mobile</string>
    <string name="customer_care">Customer Care</string>
    <string name="not_found">Not Found</string>
    <string name="lic">LIC</string>
    <string name="fastag">FASTAg</string>
    <string name="fulltt">FULLTT</string>
    <string name="topup">TOPUP</string>
    <string name="_3g_4g">3G/4G</string>
    <string name="rate_cutter">Rate Cutter</string>
    <string name="_2g">2G</string>
    <string name="roaming">Roaming</string>
    <string name="local">Local</string>
    <string name="sms">SMS</string>
    <string name="other">Other</string>
    <string name="combo">Combo</string>
    <string name="insurance">Insurance</string>
    <string name="info_zweie_com">info@zweie.com</string>
    <string name="store">Store</string>
</resources>