<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.rechargeactivities.MyBrowsePlan">


        <TextView
            android:id="@+id/no_operators"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_16sdp"
            android:fontFamily="@font/sagnika"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/not_found"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/panSearchCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="25dp"
            app:cardElevation="0.5dp"
            app:contentPadding="2sp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <SearchView
                    android:id="@+id/planSearchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:queryHint="@string/search"
                    android:background="@android:color/white"
                    android:fontFamily="@font/sagnika"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/tabs_box"
            android:layout_below="@+id/panSearchCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/days_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="scrollable">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fulltt"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/topup" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3g_4g" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_cutter" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2g" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/roaming" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/local" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sms" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/combo" />

            </com.google.android.material.tabs.TabLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <androidx.cardview.widget.CardView
                android:id="@+id/allPlanCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="0.5dp"
                app:contentPadding="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sagnika"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="5sp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/allContactsRecycler"
                        android:overScrollMode="never"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </RelativeLayout>
</layout>