<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:id="@+id/optionsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topSectionStuff"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/cancel_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_toEndOf="@id/cancel_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/clear_text"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_marginEnd="8dp"
            android:textColor="?android:colorPrimary"
            android:layout_centerVertical="true"
            tools:ignore="RelativeOverlap" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/clear_text"
            android:background="?android:attr/listDivider" />

    </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/optionsCardAnother"
        android:layout_below="@id/optionsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:id="@+id/scrollableBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/rechargeCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recharge"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/bbpsCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/bbps"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/aepsCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ae_ps"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/dmtCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dmt"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/microatmCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/micro_atm"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/payoutCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/payout"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/addFundCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_fund"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/panCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pan"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:visibility="gone"
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/insuranceCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/insurance"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/licCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lic"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                        <CheckBox
                            android:layout_marginHorizontal="10dp"
                            android:id="@+id/fastAgCheck"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fastag"
                            android:layout_marginTop="5dp"
                            android:button="@null"
                            android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                            android:background="@android:color/transparent"
                            android:textSize="18sp"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
            <Button
                android:layout_below="@+id/scrollableBottom"
                android:id="@+id/applyFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="18dp"
                android:layout_marginBottom="-8dp"
                android:text="@string/apply" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
</layout>